--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Публичная страница</title>
 </head>
 <body>
-    <h1>Моя первый вэб-сайт</h1>
-    <h2>Для его создания мне пришлось пойти длиный путь</h2>
-    <h3>И начался с саморазвития мозга и души</h3>
-    <h4>А закончился они для меня очередной тратой времени и нервов</h4> 
+    <h1>Моя первый вэб-сайт в открытом доступе!</h1>
+    <h2>Сегодня я загружаю свой первый веб сайт в открытый доступ!</h2>
+    <h3>Я очень рад этому событию!</h3>
+    <h4>Надеюсь все модули по курсу МЭО Академия пройдут так же познавательно!</h4> 
 </body>
 </html>
